clusters/homelab/media/jellyfin/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k3s-worker-2
      containers:
      - name: jackett
        image: lscr.io/linuxserver/jellyfin
        resources: {}
        ports:
        - containerPort: 32400
        volumeMounts:
        - name: config
          mountPath: /config
        - name: nfs
          mountPath: /mnt/nfs
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs
