clusters/homelab/media/jellyfin/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - port: 80
    targetPort: 8096
