clusters/homelab/media/jellyfin/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media
  labels:
    app: plex 
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - stream.${SECRET_DOMAIN}
      secretName: jellyfin-tls
  rules:
    - host: stream.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
